About page: fix "Align people cards centrally when it’s one or two cards per row"

--- a/less/style.less
+++ b/less/style.less
@@ -823,6 +823,7 @@ body {
 	&--grid {
 		flex-wrap: wrap;
 		margin: 0 -15px 64px;
+		justify-content: center;
 
 		.display (flex);
 
